--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,23 +61,25 @@ jobs:
         go build -tags croupier_real_grpc -v ./...
 
     - name: Run tests
+      if: matrix.go-version != '1.25'
       run: |
         cd sdk
         go test -tags croupier_real_grpc -v -race ./...
 
-    - name: Generate coverage (Go 1.25)
+    - name: Run tests + coverage (Go 1.25)
       if: matrix.go-version == '1.25'
       run: |
         cd sdk
-        go test -tags croupier_real_grpc -coverprofile=coverage.out -covermode=atomic ./...
+        go test -tags croupier_real_grpc -v -race -coverprofile=coverage.out -covermode=atomic ./...
 
     - name: Upload coverage to Codecov
       if: matrix.go-version == '1.25'
       uses: codecov/codecov-action@v5
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         files: sdk/coverage.out
         flags: go-sdk
-        fail_ci_if_error: false
+        fail_ci_if_error: ${{ github.event_name != 'pull_request' }}
 
     - name: Build examples
       run: |
