--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -36,8 +36,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
-          cache-dependency-path: 'docs/package-lock.json'
+          cache: 'pnpm'
+          cache-dependency-path: 'docs/pnpm-lock.yaml'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
