--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "@vuepress/plugin-search": "2.0.0-rc.121",
     "@vuepress/theme-default": "2.0.0-rc.121",
     "sass-embedded": "^1.92.1",
+    "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.26"
   },
   "keywords": [
