fix(ci): exclude proto-generated code from coverage report
The proto-generated packages in pkg/pb/croupier/... have 0% coverage
because they are generated code without tests. This was dragging down
the overall coverage from 33.7% to 4%.

Now only pkg/croupier is included in coverage.out, which accurately
reflects the actual code coverage.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,11 @@ jobs:
     - name: Run tests with coverage
       run: |
         cd sdk
-        go test -tags croupier_real_grpc -v -race -coverprofile=coverage.out -covermode=atomic ./...
+        # Run tests for main package only (exclude proto-generated code which drags down coverage)
+        go test -tags croupier_real_grpc -v -race -coverprofile=coverage.out -covermode=atomic ./pkg/croupier
+
+        # Run tests for proto packages without coverage (they are generated code)
+        go test -tags croupier_real_grpc -v -race ./pkg/...
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
