chore: disable submodules in Go SDK workflows
Update nightly.yml and release.yml to use submodules: false
instead of submodules: recursive, as the proto submodule has
been removed and proto files are now managed via the
generate_proto.go script.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: false
 
       - uses: actions/setup-go@v5
         with:
