fix: 移除 nightly workflow 中的本地 proto 生成
Proto 代码由 croupier-proto 的 sync-sdks workflow 统一生成并同步

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -46,16 +46,7 @@ jobs:
         with:
           go-version: '1.25'
           cache: true
-      - name: Add Go bin to PATH
-        run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-      - name: Install protoc
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler
-      - name: Generate proto (CI mode)
-        env:
-          CROUPIER_CI_BUILD: "1"
-        run: go run ./scripts/generate_proto.go
+      # Proto 代码由 croupier-proto 的 sync-sdks workflow 同步，无需本地生成
       - name: Go mod download
         run: go mod download
       - name: Run tests
