fix(ci): correct example directory path in nightly workflow
Change examples/complete/ to examples/comprehensive/ to match
actual directory structure in the repository.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -65,7 +65,7 @@ jobs:
           # Build binaries for examples
           mkdir -p bin
           go build -o bin/croupier-example ./examples/basic/
-          go build -o bin/croupier-complete-example ./examples/complete/
+          go build -o bin/croupier-comprehensive-example ./examples/comprehensive/
 
           # Create examples archive
           tar -czf dist/croupier-sdk-go-examples-${{ needs.version.outputs.version }}.tar.gz bin/
