feat: 更新 buf.gen.yaml 使用版本化的 remote plugins
- 从 local plugins 切换到版本化的 remote plugins
- Go protobuf: v1.36.11 (对应 protobuf 4.25.x)
- Go gRPC: v1.5.1
- 确保与 croupier-proto v25.1 版本兼容

此修改统一了整个 Croupier 生态的 protobuf 版本。

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,10 +1,11 @@
 version: v2
 plugins:
-  - local: protoc-gen-go
+  # Go plugins (使用固定版本 v1.36.11 对应 protobuf 4.25.x)
+  - remote: buf.build/protocolbuffers/go:v1.36.11
     out: pkg/pb
     opt:
       - paths=source_relative
-  - local: protoc-gen-go-grpc
+  - remote: buf.build/grpc/go:v1.5.1
     out: pkg/pb
     opt:
       - paths=source_relative
