fix: 适配新 proto 结构的 import 路径和类型

--- a/buf.yaml
+++ b/buf.yaml
@@ -1,5 +1,4 @@
-version: v1
+version: v2
 deps:
-  - buf.build/googleapis/googleapis
-directories:
-  - proto
+  - buf.build/protocolbuffers/wellknowntypes:v25.1
+
