feat: update LocalFunctionDescriptor with OpenAPI 3.0.3 fields
## 主要改动

### 类型定义更新
- **LocalFunctionDescriptor**: 添加完整的 OpenAPI 3.0.3 字段
  - 新增 `Tags`, `Summary`, `Description`, `OperationID`, `Deprecated`
  - 新增 `InputSchema`, `OutputSchema` (JSON Schema 格式)
  - 新增 `Category`, `Risk`, `Entity`, `Operation` (OpenAPI 扩展字段)

### proto 文件更新
- 从主仓库复制最新的 proto 文件到 SDK
- 更新 `proto/croupier/sdk/v1/provider.proto`
  - 包含新的 `LocalFunctionDescriptor` 定义
- 更新 `proto/croupier/sdk/v1/invocation.proto`
- 修改 `go_package` 选项指向 SDK 仓库路径

### 代码生成
- 使用 buf 生成 Go proto 代码
- 生成文件：`provider.pb.go`, `invocation.pb.go`

### 客户端更新
- **client.go**: 更新 `convertToLocalFunctions()` 方法
  - 映射所有 OpenAPI 字段到 proto 结构
  - 生成基本的 JSON Schema（`generateBasicInputSchema`, `generateBasicOutputSchema`）

### NNG Manager 更新
- **nng_manager.go**: 更新 `convertToProtoFunctions()` 方法
  - 映射所有 `LocalFunctionDescriptor` 字段到 proto

## 测试
- ✅ 编译通过
- ✅ 现有测试通过 (pkg/croupier/transport, pkg/protocol)

## 兼容性
- 向后兼容：旧的 `FunctionDescriptor` 仍然可用
- 新字段会自动生成默认值

Closes #ISSUE-SDK-UPDATE

--- a/buf.yaml
+++ b/buf.yaml
@@ -2,3 +2,8 @@ version: v2
 deps:
   - buf.build/protocolbuffers/wellknowntypes:v25.1
 
+# Specify where to find proto files
+modules:
+  - path: proto/croupier
+    name: buf.build/cuihairu/croupier
+
